--- a/src/Component/Class/CSS/Produk.css
+++ b/src/Component/Class/CSS/Produk.css
@@ -2,7 +2,7 @@
     width: 300px;
     display: inline-block;
     height: auto;   
-    border: 1px solid gray;
+    border: 1px solid red;
     padding: 10px;
     margin: 10px;
 }
@@ -13,7 +13,7 @@
 }
 
 .btn-click {
-    background-color: black;
+    background-color: pink;
     width: 100px;
     color: white;
     padding: 10px;
